# native-activity

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/res/values/: strings.xml
